@@ -3,6 +3,7 @@
 o Fixed #578 - problem with profiling queries that use LIMIT
 o Fixes #550 - problem when using START after WITH
 o Allows single node patterns in MATCH
+o Fixes problem for some patterns and all-nodes start points
 
 1.9.M05 (2013-03-05)
 --------------------
